[package]
name = "nannou_core"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "The core components of nannou - a creative coding framework for Rust. Ideal for libraries and headless/embedded applications that use nannou."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true, features = ["rand"] }
# TODO: Awaiting `no-std` to be published.
# noise = 0.6
num-traits.workspace = true
# TODO: Need to check support for no-std.
# pennereq.workspace = true
rand = { workspace = true, features = ["small_rng", "thread_rng"] }
# TODO: Needs no-std support before we can add text logic to this core.
# rusttype = "0.8"

[features]
default = ["std"]
libm = ["glam/libm", "num-traits/libm"]
serde = ["glam/serde"]
std = ["glam/std", "num-traits/std", "rand/std", "rand/std_rng"]

[package.metadata.docs.rs]
features = ["serde", "std"]
