[package]
name = "nannou_egui"
version ="0.19.0"
authors = [
    "Alexandru Ene <alex.ene0x11@gmail.com>",
    "mitchmindtree <mitchell.nordine@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "egui integration for nannou"
repository = "https://github.com/AlexEne/nannou_egui"
readme = "../README.md"

[dependencies]
egui-wgpu = "0.23"
egui = "0.23"
winit = "0.28"
nannou = { version ="0.19.0", path = "../nannou" }

[features]
wayland = []
