[package]
name = "nannou_isf"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, features = ["shader_format_glsl"] }
# TODO: waiting on bevy 0.19 support
#bevy-inspector-egui = { workspace = true }
isf.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
evalexpr.workspace = true
