[package]
name = "nannou_laser"
version ="0.18.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A cross-platform laser DAC detection and streaming API."
edition = "2018"
keywords = ["laser", "dac", "stream", "frame", "ether-dream"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/nannou_laser.git"
homepage = "https://github.com/nannou-org/nannou_laser"

[lib]
name = "nannou_laser"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
ether-dream = "~0.2.5"
rusb = "0.7"
# helios-dac = { git = "https://github.com/seem-less/helios-dac-rs.git", default-features = false, features = ["native"] }
helios-dac = { path = "../../helios-dac-rs/", default-features = false, features = ["native"] }
ilda-idtf = { version = "0.1", optional = true }
lasy = "0.4.1"
thiserror = "1"

[features]
ffi = []

[package.metadata.docs.rs]
all-features = true
