[package]
name = "nannou_laser"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A cross-platform laser DAC detection and streaming API."
keywords = ["laser", "dac", "stream", "frame", "ether-dream"]
repository = "https://github.com/nannou-org/nannou_laser.git"
homepage = "https://github.com/nannou-org/nannou_laser"
edition.workspace = true
license.workspace = true

[lib]
name = "nannou_laser"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
ether-dream = "~0.2.5"
ilda-idtf = { version = "0.1", optional = true }
lasy = "0.4.1"
thiserror = "1"

[features]
ffi = []

[package.metadata.docs.rs]
all-features = true
