[package]
name = "nannou_laser"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A cross-platform laser DAC detection and streaming API."
keywords = ["laser", "dac", "stream", "frame", "ether-dream"]
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nannou_laser"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
ether-dream.workspace = true
ilda-idtf = { workspace = true, optional = true }
lasy.workspace = true
thiserror.workspace = true

[features]
ffi = []

[package.metadata.docs.rs]
all-features = true
