[package]
name = "nannou_mesh"
version ="0.18.0"
authors = ["mitchmindtree <mail@mitchellnordine.com>"]
description = "The mesh abstraction shared between nannou's `Draw` and `Ui` abstractions."
readme = "README.md"
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"
homepage = "https://nannou.cc"
edition = "2021"

[dependencies]
nannou_core = { version ="0.18.0", path = "../nannou_core" }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
serde1 = ["nannou_core/serde", "serde"]
