[workspace]

[package]
name = "nannou_midi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
default-features = false
features = ["bevy_log"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
midir = "0.10"
