[package]
name = "nannou_new"
version ="0.16.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A tool for easily starting Nannou projects."
readme = "README.md"
keywords = ["tool", "build", "nannou", "creative", "sketch"]
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"
homepage = "https://github.com/nannou-org/nannou/tree/master/nannou_new"
edition = "2018"

[dependencies]
cargo = "0.42" # For retrieving the latest `nannou` version and working with cargo-clone.
names = "0.11" # For generating random project names.
rand = "0.8" # For generating random beverages (very important).
