[package]
name = "nannou_osc"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "The OSC API for Nannou, the creative coding framework."
readme = "README.md"
keywords = ["OSC", "protocol", "cross-platform", "UDP", "socket"]
repository = "https://github.com/nannou-org/nannou_osc.git"
homepage = "https://nannou.cc"
edition.workspace = true
license.workspace = true

[dependencies]
rosc = "0.10"
