[package]
name = "nannou_package"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "The build packaging tool for the Nannou Creative Coding Framework."
readme = "README.md"
keywords = ["package", "build", "creative", "sketch"]
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"
homepage = "https://github.com/nannou-org/nannou"
edition = "2018"

[dependencies]
chrono = "0.4"
copy_dir = "0.1"
walkdir = "2"
zip = "0.3"
