[package]
name = "nannou_timeline"
version ="0.17.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A timeline widget, compatible with all conrod GUI projects."
readme = "README.md"
keywords = ["timeline", "automation", "GUI", "conrod", "envelope"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/nannou_timeline.git"
homepage = "https://nannou.cc"

[dependencies]
conrod_derive = "0.75"
conrod_core = "0.75"
envelope = "0.8"
itertools = "0.4.16"
num = "0.1.27"
pitch_calc = { version = "0.12", features = ["serde"] }
time_calc = { version= "0.13", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde1 = [
    "serde",
    "pitch_calc/serde",
    "time_calc/serde",
]

[dev-dependencies]
nannou = { version ="0.17.0", path = "../nannou" }
rand = "0.3.12"
serde_json = "1.0"
