[package]
name = "nannou_video"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_render",
]}
video-rs.workspace = true
thiserror.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
