[package]
name = "nannou_video"
version.workspace = true
description = "Video decoding and playback, built on Bevy for nannou - the creative-coding framework."
readme = "README.md"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_render",
]}
thiserror.workspace = true
flume.workspace = true
serde = { workspace = true, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
video-rs.workspace = true
tempfile.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_render",
    "webgpu",
]}
wasm-bindgen.workspace = true
js-sys = "0.3"
gloo-events = "0.2"
wgpu-types = { version = "28.0", features = ["web"] }
web-sys = { workspace = true, features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "EventTarget",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "MediaError",
    "Url",
    "Window",
]}
