[package]
name = "nannou_webcam"
description = "webcam plugin for nannou/bevy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
flume = "^0.11"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
default-features = false
features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_render",
  "std",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nokhwa = { version = "0.10", features = ["input-native", "camera-sync-impl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]

[lib]
path = "src/lib.rs"
