[package]
name = "nannou_wgpu"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "Items related to wgpu and its integration in nannou - a creative coding framework for Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/nannou-org/nannou.git"
homepage = "https://nannou.cc"
edition = "2018"

[dependencies]
futures = "0.3"
image = { workspace = true, optional = true }
wgpu = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt"]}

[features]
capturer = ["image"]
replay = ["wgpu/replay"]
serde = ["wgpu/serde"]
spirv = ["wgpu/spirv"]
webgl = ["wgpu/webgl"]

[package.metadata.docs.rs]
features = ["capturer", "image", "replay", "serde", "spirv", "webgl"]
