[package]
name = "nannou_wgpu"
version ="0.19.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "Items related to wgpu and its integration in nannou - a creative coding framework for Rust."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
image = { workspace = true, optional = true }
wgpu.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt"]}

[features]
capturer = ["image"]
replay = ["wgpu/replay"]
serde = ["wgpu/serde"]
spirv = ["wgpu/spirv"]
webgl = ["wgpu/webgl"]

[package.metadata.docs.rs]
features = ["capturer", "image", "replay", "serde", "spirv", "webgl"]
