[package]
name = 'book_tests'
version = '0.1.0'
authors = ['mitchmindtree <mitchell.nordine@gmail.com>']
edition = '2018'
description = 'For testing the nannou-guide, while including the nannou dependencies.'

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
nannou = { version ="0.14.0", path = "../../nannou" }
nannou_osc = { version ="0.14.0", path = "../../nannou_osc" }

