[package]
name = 'book_tests'
version = '0.1.0'
authors = ['mitchmindtree <mitchell.nordine@gmail.com>']
edition.workspace = true
description = 'For testing the nannou-guide, while including the nannou dependencies.'

[build-dependencies]
# Temporarily use git dependency until budziq/rust-skeptic#142 is merged and published.
# https://github.com/budziq/rust-skeptic/pull/142
skeptic = { git = "https://github.com/Erk-/rust-skeptic", branch = "fix-rust-1-77" }
#skeptic = "0.13"

[dev-dependencies]
# Temporarily use git dependency until budziq/rust-skeptic#142 is merged and published.
# https://github.com/budziq/rust-skeptic/pull/142
skeptic = { git = "https://github.com/Erk-/rust-skeptic", branch = "fix-rust-1-77" }
#skeptic = "0.13"
nannou = { version ="0.19.0", path = "../../nannou" }
nannou_osc = { version ="0.19.0", path = "../../nannou_osc" }

